--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div class="header">
+		<header>
 			<h2>Show's News</h2>
-		</div>
+		</header>
 		<div class="main">
 			<div class="latest-news-section">
 			<h3>Latest News Articles</h3>
